using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class StaticStrings
{
    public static string Horizontal = "Horizontal";
    public static string Vertical = "Vertical";
    public static string Pivot = "Pivot";
    public static string Reload = "Reload";

    public static string vertical = "vertical";
    public static string horizontal = "horizontal";
    public static string aiming = "aiming";
    public static string sprint = "sprint";
    public static string crouch = "crouch";
    public static string weaponType = "weaponIdle";
}
